--- a/meeting1/index.html
+++ b/meeting1/index.html
@@ -97,6 +97,11 @@
         </ul>
     </div>
 
+    <div id="pliroforiki" class="step" data-x="-1850" data-y="2000" data-rotate="0" data-scale="2">
+    <blockquote><b>Πληροφορική</b> ή επιστήμη υπολογιστών ονομάζεται η θετική και εφαρμοσμένη επιστήμη η οποία ερευνά τα θεωρητικά θεμέλια και τη φύση των πληροφοριών, των αλγορίθμων και των υπολογισμών, καθώς και τις τεχνολογικές εφαρμογές τους σε αυτοματοποιημένα υπολογιστικά συστήματα, από τη σκοπιά της σχεδίασης, της ανάπτυξης, της υλοποίησης, της διερεύνησης, της ανάλυσης και της προδιαγραφής τους.
+    </blockquote>
+    </div>
+
     <div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="6">
         <p>Αυτά είναι μόνο η <b>μισή</b> <span class="thoughts">αλήθεια!</span></p>
     </div>
@@ -113,6 +118,16 @@
     <div id="tiny" class="step" data-x="2825" data-y="2325" data-z="-3000" data-rotate="300" data-scale="1">
         <p>Η <b>Πληροφορική</b> είναι παντού....</p>
     </div>
+
+    <div id="hawking" class="step" data-y="1500" data-x="500" data-scale="2">
+        <p><img src="hawking.jpg" /></p>
+        <blockquote class="small">είτε θέλεις να αποκαλύψεις τα μυστήρια του σύμπαντος<br/>
+        ή να ακολουθήσεις μια καριέρα στον 21ο αιώνα,<br/>
+        οι βασικές γνώσεις προγραμματισμού<br/>
+        είναι μια θεμελειώδης γνώση<br/>
+        που θα πρέπει να κατακτήσεις.</blockquote>
+    </div>
+
 
     <!--
         
